# whiffd

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: __init__.py
app/api/: deps.py
app/core/: config.py  db.py
app/db/: models.py
app/services/: ballchasing.py
scripts/: init_db.py
